@@ -1,5 +1,5 @@
 
-EXTRA_DIST = tls_arch_mtalpha.h
+EXTRA_DIST = tls_arch_mtalpha.h tls_arch_pthreads.h
 
 CC = $(PTHREAD_CC)
 
@@ -11,5 +11,5 @@ TESTS = $(check_PROGRAMS)
 tlsmcheck_CPPFLAGS = -DARCH_TLS_SERVICES=\"tls_arch_pthreads.h\"
 tlsmcheck_CFLAGS = $(PTHREAD_CFLAGS) $(AM_CFLAGS)
 tlsmcheck_LDADD = $(PTHREAD_LIBS)
-tlsmcheck_SOURCES = tlsmcheck.c tlsmalloc.c tlsmalloc.h tricks.h
+tlsmcheck_SOURCES = tlsmcheck.c tlsmalloc.c tlsmalloc.h tricks.h tlsconfig.h
 endif
